# bucky-rs

./: .travis.yml  Cargo.toml  Makefile  README.md
date-iterator/src/: calendar_duration.rs
examples/: README.md  d3-bollinger.rs  d3-histogram.rs  svg-histogram.rs
examples/d3-bollinger/: README.md  main.rs
examples/d3-histogram/: README.md  main.rs
examples/d3-histogram-svg/: README.md  main.rs
examples/d3-marey/: README.md  main.rs  record.rs
minidom-rs/src/: convert.rs  element.rs
src/: annotated.rs  axis.rs  color.rs  error.rs  lib.rs
src/array/: extent.rs  histogram.rs  mod.rs  quantile.rs  threshold.rs
src/array/ticks/: mod.rs  number.rs  time.rs  time_duration.rs
src/interpolate/: hsl.rs  mod.rs  number.rs  piecewise.rs
src/scale/: band.rs  continuous.rs  linear.rs  log.rs  mod.rs  ordinal.rs  quantile.rs  time.rs
src/shape/: line.rs  mod.rs  stack.rs
src/shape/curve/: basis.rs  cardinal.rs  linear.rs  mod.rs  natural.rs  step.rs
src/shape/offset/: expand.rs  mod.rs  none.rs
