[package]
name = "bucky"
version = "0.1.0"
authors = [ "Alex Zepeda <rustgraphs@inferiorhumanorgans.com" ]
edition = "2018"

[lib]
name = "bucky"
path = "src/lib.rs"

[features]
default = [ "color", "dom-minidom", "time" ]
color = [ ]
dom-minidom = [ "minidom", "quick-xml" ]
time = [ "chrono", "date-iterator" ]

[dependencies]
thiserror = "1.0"
order-stat = "0.1"

# dom-minidom deps
minidom = { git = "https://github.com/inferiorhumanorgans/minidom", branch = "iho/bucky-support", optional = true }
quick-xml = { version = "0.20", optional = true }

# time deps
chrono = { version = "0.4", features = [ "serde" ], optional = true }
date-iterator = { git = "https://github.com/inferiorhumanorgans/date-iterator", branch = "iho/naive-funcs", optional = true }

pathfinder_canvas = { git = "https://github.com/inferiorhumanorgans/pathfinder", branch = "iho/verbose-empty-contour" }
pathfinder_geometry = { git = "https://github.com/inferiorhumanorgans/pathfinder", branch = "iho/verbose-empty-contour" }
pathfinder_content = { git = "https://github.com/inferiorhumanorgans/pathfinder", branch = "iho/verbose-empty-contour" }

[dev-dependencies]
csv = "1.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
svg = "0.6" # Make this a dependency of the svg-* examples only

[[example]]
name = "d3-histogram"
required-features = [ "dom-minidom" ]

[[example]]
name = "d3-bollinger"
bench = true
